* Tue Aug 01 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.3.2-0
- Ensure OBE 'puppet_crl_pull' cron job from pupmod versions prior
  to 7.3.1 is removed.

* Thu Jul 27 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.3.2-0
- README updates:
  - Informed users of legacy auth.conf deprecation
  - Provided instructions to reproduce custom auth.conf entries
    in puppet

* Thu Jun 22 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.3.1-0
- fixed the path to the pki_files and krb_files in the auth.conf
  so remote systems could download files.
- Update puppet requirement in metadata.json

* Wed Jun 14 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.3.1-0
- Removed Puppet CRL download, the puppet agent now checks for the expiration of
  the cert automatically

* Mon Jun 05 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.3.1-0
- Ensure legacy auth.conf is backed up before removing it. This is a
  follow up to SIMP-3049 based on feedback to SIMP-3196.

* Mon May 22 2017 Kendall Moore <kendall.moore@onyxpoint.com> 7.3.1-0
- Added manifest to manage simp-specific puppet master auth requirements
- Disabled puppetserver setting to enable legacy auth.conf by default
- Remove legacy auth.conf placed by the `puppet-agent` package

* Fri May 19 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.3.1-0
- Removed deprecated `audit` metaparameter

* Fri Apr 28 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.1-0
- Use global catalyst to configure package_ensure.
- Add 'puppet_enterprise::profile::database' class definition to the pe_classlist
  and move the postgresql components under that class.
- Add 'puppet_enterprise::profile::primary_master_replica' class definition
  to the class list to work around an issue in production

* Tue Apr 04 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.0-0
- Add 'package_ensure' to allow users to specify that they want to use 'latest' or 'installed'

* Wed Mar 08 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.2.0-0