@@ -14,6 +14,6 @@ Requires: pupmod-simp-pki >= 6.0.0-0
 Requires: pupmod-simp-simpcat < 7.0.0-0
 Requires: pupmod-simp-simpcat >= 6.0.0-0
 Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
+Requires: pupmod-simp-simplib >= 3.5.0-0
 Requires: pupmod-simp-tcpwrappers < 7.0.0-0
 Requires: pupmod-simp-tcpwrappers >= 6.0.0-0
